[workspace]
members = ["crates/extract", "crates/macro", "crates/support"]


[workspace.package]
version = "0.0.1"
authors = ["Bernhard Schuster <bernhard@ahoi.io>", "Jason Lee <huacnlee@gmail.com>"]
description = "A compile time internationalization library, that does all the work at compile time using the `format_t!` macro. Translation files are compatible with `rust-i18n`."
categories = ["localization", "internationalization"]
edition = "2021"
exclude = ["crates", "tests"]
keywords = ["i18n", "yml", "localization", "internationalization"]
readme = "README.md"
repository = "https://github.com/drahnr/i18n-again"
license = "MIT"

[package]
name = "i18n-again"
version.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
exclude = ["crates", "tests"]
build = "build.rs"

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "2.32", optional = true }
itertools = { version = "0.11", optional = true }
once_cell = "1.10.0"
quote = { version = "1", optional = true }
i18n-again-extract = { path = "./crates/extract", version = "0.0.1", optional = true }
i18n-again-macro = { path = "./crates/macro", version = "0.0.1" }
serde = "1"
serde_derive = "1"
toml = "0.7.3"
fs-err = "2.9"
thiserror = "1"

[dev-dependencies]
foo = { path = "examples/foo" }

[features]
default = ["i18n-again-extract", "clap", "anyhow", "quote", "itertools"]

[build-dependencies]
glob = "0.3"
regex = "1"

[[example]]
name = "app"
test = true

[[bin]]
name = "cargo-i18n"
path = "src/main.rs"
required-features = ["default"]
