[package]
name = "i18n-again-extract"
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.0.1"

[dependencies]
anyhow = "1"
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
regex = "1"
i18n-again-support = { path = "../support", version = "0.0.1" }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
syn = { version = "1", features = ["full"] }
fs-err = "2.9"
