[package]
name = "i18n-again-macro"
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
once_cell = "1.10.0"
proc-macro2 = "1.0"
quote = "1.0.2"
i18n-again-support = { path = "../support", version = "0.0.0" }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "parsing"] }
fs-err = "2.9"
proc-macro-crate = "1.2"

[lib]
proc-macro = true
