[package]
name = "i18n-again-support"
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
glob = "0.3"
once_cell = "1.10.0"
proc-macro2 = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
postcard = { version = "1", features = ["alloc"] }
fs-err = "2.9"
cargo_toml = "0.15"
toml = "0.7"
