[package]
name = "foo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
once_cell = "1.10.0"
i18n-again = { path = "../.." }
fs-err = "2.9"

[dev-dependencies]
i18n-again-support = { path = "../../crates/support" }

[build-dependencies]
i18n-again-support = { path = "../../crates/support" }

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "loco"
